--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,9 @@ body {
   --medium-gray: #d9d9d9;
   --smoke-gray: #f8f9fd;
   --color-text: #353a40;
+  --primary-white-bg: #fafafa;
 
   /* radius */
-  --radius-2xl: 25px;
+  --radius-2xl: 20px;
+  --radius-3xl: 25px;
 }
