--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,7 @@ body {
   --primary-light-gray: #adafb1;
   --primary-dark-gray: #3f463e;
   --medium-gray: #d9d9d9;
+  --dark-gray: #4d4d4d;
   --smoke-gray: #f8f9fd;
   --color-text: #353a40;
   --primary-white-bg: #fafafa;
