#44 Add gray icon color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,7 @@ body {
   --color-text: #353a40;
   --primary-white-bg: #fafafa;
   --secondary-white-bg: #f5f7f9;
+  --primary-gray-icon: #a6a6a6;
 
   /* radius */
   --radius-2xl: 20px;
