--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,7 @@ body {
   --primary-orange: #ff724c;
   --primary-white: #ffffff;
   --primary-yellow: #fdbf50;
+  --primary-red: #ea4344;
   --primary-gray: #999999;
   --secondary-gray: #c0c0c0;
   --primary-light-gray: #adafb1;
