#59 Add some colors

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,7 @@ body {
   --primary-orange: #ff724c;
   --primary-orange-hover: #eb6946;
   --primary-white: #ffffff;
+  --primary-white-hover: #f2f2f3;
   --primary-yellow: #fdbf50;
   --primary-yellow-hover: #e8b14a;
   --primary-yellow-disabled-light: #fbd794;
