--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,8 @@ body {
   --medium-gray: #d9d9d9;
   --dark-gray: #4d4d4d;
   --smoke-gray: #f8f9fd;
+  --light-gray: #a3a5a8;
+  --arrow-gray: #8e8c8e;
   --color-text: #353a40;
   --color-text-dark: #727272;
   --color-text-gray: #5a5b5c;
