--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,6 +38,7 @@ body {
   --primary-gray-icon: #a6a6a6;
   --dark-gray-icon: #484c52;
   --primary-white-icon: #e2e2e2;
+  --primary-gray-text: #8e8e93;
 
   /* radius */
   --radius-2xl: 20px;
