#Add support page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,7 @@ body {
   --dark-gray-icon: #484c52;
   --primary-white-icon: #e2e2e2;
   --primary-gray-text: #8e8e93;
+  --primary-gray-button: #ebebeb;
 
   /* radius */
   --radius-2xl: 20px;
