--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,11 +39,13 @@ body {
   --primary-gray-icon: #a6a6a6;
   --dark-gray-icon: #484c52;
   --primary-white-icon: #e2e2e2;
-  --secondary-button-light: #ebebeb;
+  --secondary-button-light: #f6f6f6;
   --light-input-bg: #f7f8f9;
   --light-input-border: #e8ecf4;
   --primary-input-gray: #8391a1;
   --dark-input-border: #383b3e;
+  --color-text-gray-secondary: #9e9e9e;
+  --color-text-light-gray-hover: #606060;
 
   /* radius */
   --radius-2xl: 20px;
