--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,6 +48,7 @@ body {
   --dark-input-border: #383b3e;
   --color-text-gray-secondary: #9e9e9e;
   --color-text-light-gray-hover: #606060;
+  --color-text-glay: #6d7885;
 
   /* radius */
   --radius-2xl: 20px;
