--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,6 +49,7 @@ body {
   --color-text-gray-secondary: #9e9e9e;
   --color-text-light-gray-hover: #606060;
   --color-text-glay: #6d7885;
+  --color-line-gray: #e6e6e6;
 
   /* radius */
   --radius-2xl: 20px;
