#90 Customize psu tools

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,6 +50,7 @@ body {
   --color-text-light-gray-hover: #606060;
   --color-text-glay: #6d7885;
   --color-line-gray: #e6e6e6;
+  --color-glay-about: #ababab;
 
   /* radius */
   --radius-2xl: 20px;
